[gd_scene load_steps=4 format=3 uid="uid://cf6aml1lrd2yk"]

[ext_resource type="Script" path="res://scenes/game/gauge_panel.gd" id="1_6vj7f"]
[ext_resource type="Texture2D" uid="uid://cy0pcorknc8op" path="res://assets/cards/border_thin_pressed.png" id="2_s5ifx"]
[ext_resource type="Texture2D" uid="uid://kwcp6d7oulcg" path="res://assets/cards/border_thin_hover.png" id="3_lr7n5"]

[node name="Gauge" type="Node2D"]
script = ExtResource("1_6vj7f")

[node name="GaugePanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(90, 90)
offset_right = 53.0
offset_bottom = 78.0

[node name="GaugeVBox" type="VBoxContainer" parent="GaugePanel"]
layout_mode = 2

[node name="GaugeLabel" type="Label" parent="GaugePanel/GaugeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GAUGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GaugeAmount" type="Label" parent="GaugePanel/GaugeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Focus" type="TextureButton" parent="GaugePanel"]
layout_mode = 2
texture_pressed = ExtResource("2_s5ifx")
texture_hover = ExtResource("3_lr7n5")

[connection signal="pressed" from="GaugePanel/Focus" to="." method="_on_focus_pressed"]
